feat(allocationReport): remove taxesAllocation from reports and update related logic
