# src/models/AllocationReportRow.ts
@@ -2,7 +2,6 @@ interface AllocationReportRow {
   fundingSourceName: string;
   hoursAllocation: number;
   wagesAllocation: number;
-  taxesAllocation: number;
   additionalExpenses: number;
   total: number;
 }
